gatekeeper/rules/constraints/do_not_allow_empty_or_latest_tag_images.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredImageTag
metadata:
  name: deployments-must-have-image-tag-and-not-latest
spec: {}
