gatekeeper/rules/constraints/do_not_allow_empty_resources.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  parameters:
    cpu: "200m"
    memory: "1Gi"
