gatekeeper/rules/constraints/must_have_liveness_probe.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLivenessProbe
metadata:
  name: liveness-probe
spec:
  enforcementaction: deny
