gatekeeper/rules/constraints/must_have_unique_ingresses.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueIngressHost
metadata:
  name: unique-ingress-host
spec: {}
